bc found how to write partial eta squared.. bc mon manmansae!!

--- a/dissertation.rmd
+++ b/dissertation.rmd
@@ -91,7 +91,7 @@ FM1_a_dialmean_welch
 
 # Results and Discussions
 ## Perception of Dialectical Emotions
-To test our hypothesis about cultural difference in the perception of dialectical emotions in facial expressions, we created a variable that captured the mean number of opposite-valence emotions perceived across facial stimuli for each participant.  We counted intensity ratings of 1 or higher (“a little” or more) for negative emotions in smiling faces (e.g., disgust/hate, fear, contempt/scorn, sadness, and anger) and for positive emotions in frowning faces (e.g.,*amusement/enjoyment, contentment/satisfaction, happiness/pleasure, and pride*). These counts were averaged across eight faces.  Using a repeated measures MANOVA, we tested for the between-subject factor of cultural group, controlling for the effects of stimuli set, and participant gender. Additionally, we controlled for the within-subject factors of valence of face (smiling versus frowning), model race (White, Asian), and model gender (female, male).  As predicted (see Figure 1), we found that Japanese participants (M=1.88, SE=0.12) reported more opposite-valence emotions than European American participants (M = 0.72, SE = 0.11; *F* (1, 146) = 47.87, *p* < .001; partial eta= .25, 95% [0.92, 1.63]). This finding applied to both smiling faces (*F*(1,146) =46.38, *p* <.001) and frowning faces (*F* (1,146) =33.67, *p* <.001).
+To test our hypothesis about cultural difference in the perception of dialectical emotions in facial expressions, we created a variable that captured the mean number of opposite-valence emotions perceived across facial stimuli for each participant.  We counted intensity ratings of 1 or higher (“a little” or more) for negative emotions in smiling faces (e.g., disgust/hate, fear, contempt/scorn, sadness, and anger) and for positive emotions in frowning faces (e.g.,*amusement/enjoyment, contentment/satisfaction, happiness/pleasure, and pride*). These counts were averaged across eight faces.  Using a repeated measures MANOVA, we tested for the between-subject factor of cultural group, controlling for the effects of stimuli set, and participant gender. Additionally, we controlled for the within-subject factors of valence of face (smiling versus frowning), model race (White, Asian), and model gender (female, male).  As predicted (see Figure 1), we found that Japanese participants (M=1.88, SE=0.12) reported more opposite-valence emotions than European American participants (M = 0.72, SE = 0.11; *F* (1, 146) = 47.87, *p* < .001; partial $$\eta^2$$= .25, 95% [0.92, 1.63]). This finding applied to both smiling faces (*F*(1,146) =46.38, *p* <.001) and frowning faces (*F* (1,146) =33.67, *p* <.001).
 
 
 
@@ -104,14 +104,14 @@ Fifty-two female European American (M=19.12, SD=1.00) and 58 female internationa
 We used the same procedures and photographs (Beaupre & Hess, 2005) as in Study 1. For Study 2, however, four faces rather than eight faces were presented.  Faces were morphed from neutral to extreme emotion displays in twenty steps to create greater nuance than in Study 1, in which only ten steps were used. Participants completed a one-hour, computer-based (MediaLab) study in their native language.  In addition to the emotion intensity scales described in Study 1, participants completed a scale of internal and external attributions of emotions . Otherwise, the procedure was the same as in Study 1. 
 
 ## Results and Discussions
-*Perception of Dialectical Emotions*. To test our hypothesis about cultural difference in the perception of dialectical emotions in facial expressions, we created the same variable as in Study 1, which captured the mean number of opposite-valence emotions perceived across facial stimuli for each participant.  These counts were averaged across the four faces.  Using a repeated measures MANOVA, we tested for the between-subject factor of cultural group controlling for the within-subject factors of stimulus set, valence (smiling or frowning), and model race (White or Asian).  Replicating the results from Study 1, we found that Japanese participants (M=1.39, SE=0.15) reported more opposite-valence emotions than European American participants (M = 0.92, SE = 0.16; *F* (1, 107) = 4.88, *p* = .03; partial CI2= .04).  There were no significant effects of stimulus, race of the model, or emotional display.
+*Perception of Dialectical Emotions*. To test our hypothesis about cultural difference in the perception of dialectical emotions in facial expressions, we created the same variable as in Study 1, which captured the mean number of opposite-valence emotions perceived across facial stimuli for each participant.  These counts were averaged across the four faces.  Using a repeated measures MANOVA, we tested for the between-subject factor of cultural group controlling for the within-subject factors of stimulus set, valence (smiling or frowning), and model race (White or Asian).  Replicating the results from Study 1, we found that Japanese participants (M=1.39, SE=0.15) reported more opposite-valence emotions than European American participants (M = 0.92, SE = 0.16; *F* (1, 107) = 4.88, *p* = .03; partial $$\eta^2$$= .04).  There were no significant effects of stimulus, race of the model, or emotional display.
 
 *Attributional Style and Dialectical Emotions*. 
-*Dispositional Attribution*.  We tested our prediction of cultural group differences using a repeated measures MANOVA.  We tested for the between-subject factor of cultural group and controlling for the effects of stimulus set; we additionally controlled for the within-subject factors of display type (smiling versus frowning) and model race (White, Asian).  As predicted, we found that European American participants (M=5.86, SE=0.18) made more attributions of the emotion to personality traits than Japanese participants (M=3.78, SE=0.18; F (1, 101) = 67.27, p < .001; partial η2= .40).  We also found an effect for the type of emotional display, such that greater dispositional attributions were made to smiling (M=5.81, SE=.16) than grimacing faces (M=3.83, SE=.17, F(1,101)=15.93, p<.001).
+*Dispositional Attribution*.  We tested our prediction of cultural group differences using a repeated measures MANOVA.  We tested for the between-subject factor of cultural group and controlling for the effects of stimulus set; we additionally controlled for the within-subject factors of display type (smiling versus frowning) and model race (White, Asian).  As predicted, we found that European American participants (M=5.86, SE=0.18) made more attributions of the emotion to personality traits than Japanese participants (M=3.78, SE=0.18; F (1, 101) = 67.27, p < .001; partial $$\eta^2$$= .40).  We also found an effect for the type of emotional display, such that greater dispositional attributions were made to smiling (M=5.81, SE=.16) than grimacing faces (M=3.83, SE=.17, F(1,101)=15.93, p<.001).
 
-*External attribution*.  We tested The three scales of external attribution (i.e., emotion caused by others, chance, and combination of factors) were reliable (α=.83).  Therefore, a summary variable was created which captured the mean of all three scales for each participant.  Surprisingly, European American participants (M=7.03, SE=.15) rated emotions as being caused more by external attributions than Japanese (M=5.83, SE=.15; F(1, 101)=33.21, p<.001; partial η2= .25).
+*External attribution*.  We tested The three scales of external attribution (i.e., emotion caused by others, chance, and combination of factors) were reliable (α=.83).  Therefore, a summary variable was created which captured the mean of all three scales for each participant.  Surprisingly, European American participants (M=7.03, SE=.15) rated emotions as being caused more by external attributions than Japanese (M=5.83, SE=.15; F(1, 101)=33.21, p<.001; partial $$\eta^2$$= .25).
 
-*Difference Score between Internal Attribution and External Attribution*. We computed difference score between interanl attribution and external attribution. 
+*Difference Score between Internal Attribution and External Attribution*. We computed difference score between interanl attribution and external attribution (difference score: internal attribution-external attribution). We tested for the between-subject factor of cultural group and controlling for the effects of stimulus set; we additionally controlled for the within-subject factors of display type (smiling versus frowning) and model race (White, Asian). We found that both cultural groups made more external attribution than internal attribution. As predicted, however, this tendency was stronger for Japanese (internal attribution- external attribution: M Japan = -2.05, SE = .173) than European Americans (M Euro = -1.17, .173, F (1, 101 = 12.76, *p*<.001, partial $$\eta^2$$= .11).
 	
 	Mediation of Cultural Differences in Dialectical Emotion Perception by Attribution.  We tested whether cultural group differences in the recognition of opposite-valenced emotions in faces were mediated by dispositional attribution ratings using a bootstrap method (Preacher & Hayes, 2004).  The benefit of using a bootstrap method over a traditional series of regression analyses is that the bootstrap does not assume normality in the distribution of the dependent variable and ….  
 
@@ -151,7 +151,7 @@ The coding team consisted of five research assistants (Japanese or European Amer
 #Results and Discussions
 *Number of emotion labels.*  European Americans (M=1.72, SE=.04) used more emotion labels than Japanese (M=1.50, SE=.04), t(290)=3.98, p<.001.
 *Target emotion recognition.*  Both European American and Japanese participants reported the targeted emotions (happiness, anger) more than any other emotion labels (see Table X). European American participants more frequently listed the target emotion happiness for smiling displays compared to Japanese participants, chi2 (4, N = 292) = 126.09, p< .001; a similar trend emerged for anger mentions in frowning displays, chi2 (4, N = 292) = 8.32, p=.07. 
-*Perception of Dialectical Emotions.* We computed a percentage score for each participant of how many opposite-valence emotions they recognized in a face, divided by the total number of emotions they observed.  For example, for smiling faces, a participant’s score would be the number of negative emotions they listed, divided by sum of the number of negative, positive, and neutral emotions they listed for that particular stimulus.  Using a repeated measure MANOVA, we tested for the between-subject factor of cultural group controlling for the effects of participant gender; we additionally controlled for the within-subject factors of display type (smiling versus frowning) and model race (White, Asian).  Replicating the results from Studies 1 and 2, we found that Japanese participants (M=0.20, SE=0.01) reported a greater percentage of opposite-valence emotions than European American participants (M=0.14, SE=0.01; F(1, 281) = 17.39, p< .001; partial CI2= .06). We also found a greater percentage of dialectical emotions observed in Asian (M=.29, SE=.01) than White faces (M=.05, SE=.01), F(1, 281)=47.69, p<.001).  
+*Perception of Dialectical Emotions.* We computed a percentage score for each participant of how many opposite-valence emotions they recognized in a face, divided by the total number of emotions they observed.  For example, for smiling faces, a participant’s score would be the number of negative emotions they listed, divided by sum of the number of negative, positive, and neutral emotions they listed for that particular stimulus.  Using a repeated measure MANOVA, we tested for the between-subject factor of cultural group controlling for the effects of participant gender; we additionally controlled for the within-subject factors of display type (smiling versus frowning) and model race (White, Asian).  Replicating the results from Studies 1 and 2, we found that Japanese participants (M=0.20, SE=0.01) reported a greater percentage of opposite-valence emotions than European American participants (M=0.14, SE=0.01; F(1, 281) = 17.39, p< .001; partial $$\eta^2$$ CI2= .06). We also found a greater percentage of dialectical emotions observed in Asian (M=.29, SE=.01) than White faces (M=.05, SE=.01), F(1, 281)=47.69, p<.001).  
 *Attribution Style Difference.*European American participants were more likely to make an internal attribution than Japanese participants (Table 3). When separately analyzed by the valence of facial expression, smiling displays produced more internal attributions than did frowning displays (Table 3). Consistent with previous literature, Japanese made more external attributions compared to European Americans for both non-social external attribution and social external attributions (Table 3 ). 
 
 #Discussion
