--- a/dissertation.rmd
+++ b/dissertation.rmd
@@ -13,7 +13,7 @@ affiliation:
     institution: The University of Michigan
 
 abstract: |
-  Enter abstract here (note the indentation, if you start a new paragraph).
+  Previous cross-cultural comparisons of experiencing mixed emotion have found that East Asians experience positive and negative emotions simultaneously more than European Americans. However, not much is known about differences across cultures in how people perceive mixed emotion from facial expressions. By presenting facial expressions varying in valence, race, and gender to participants, we aimed to discover whether East Asians not only experience but also perceive more mixed emotions than European Americans. Study 1 compared the mean nubmer of opposite-valence emotions perceived across 80 facial stinuli (i.e., perceiving both anger and happiness when presented with a frowning face), and found that Japanese participants perceived more mixed emtoions than European Americans. Study 2 replicated the findings with more facial stimuli, and also found that this cultural difference was mediated by the degree to which participants believe the expression of emotion was caused by the person's personality (internal attribution). In study 3, we asked open-ended questions and replicated the findings from study 1 and 2. The results from three studies consistently supported our hypothesis, showing that Japanese perceived more mixed emotions from facial expressions than European Americans. 
   
 note: |  
   Complete departmental affiliations for each author (note the indentation, if you start a new paragraph).
@@ -51,7 +51,7 @@ It follows that East Asians should also be more likely to perceive both positive
 
 There are a number of mechanisms that can explain the higher emotion complexity of East Asians compared to European Americans. One possibility is the tradition ofdialectical thinking in East Asian, compared to the Western tradition of analytical thinking. Dialectical thinking refers to the traditional teachings of East Asia about the complementarity of opposites (i.e. the ying-yang principle) and the view that life is full of contradictions and change (Nisbett, Peng, Choi, & Norenzayan, 2001; Peng & Nisbett, 1999). This contrasts with the Western' analytical way of thinking, which is reflected in linear thinking (Ji) and a greater focus on the features of an object than its gestalt (Norenzayan). A number of scholars have suggested that the greater prevalence of dialectical thinking among East Asians leads them to perceive positive and negative emotions together more often than Westerners (Schimmack et al.; Spencer-Rogers et al).
 
-A second possibility involves   differences in the construal of the self (Markus & Kitayama, 1991). European American socialization contexts have traditionally embraced independence. The independent self-construal manifests in the emotional world as a perception of emotions as a reflection of the authentic self (Uchida, Townsend, Markus, & Bergsieker, 2009). East Asian traditions, on the other hand, have emphasized interdependence resulting in a tendency to see emotions as a reflection of the person’s interactions with other people (Uchida et al., 2009; Greenfield, 2013; Kashima et al., 1992). A recent analysis by Grossman et al (2015) showed that interdependence accounted for more cross-cultural difference than did dialecticism.
+A second possibility involves differences in the construal of the self (Markus & Kitayama, 1991). European American socialization contexts have traditionally embraced independence. The independent self-construal manifests in the emotional world as a perception of emotions as a reflection of the authentic self (Uchida, Townsend, Markus, & Bergsieker, 2009). East Asian traditions, on the other hand, have emphasized interdependence resulting in a tendency to see emotions as a reflection of the person’s interactions with other people (Uchida et al., 2009; Greenfield, 2013; Kashima et al., 1992). A recent analysis by Grossman et al (2015) showed that interdependence accounted for more cross-cultural difference than did dialecticism.
 
 Thus, both the dialectical tradition and the interdependent way of construing the self can lead to the perception of mixed emotion. For example, when faced with a smiling face, dialectical East Asians can easily imagine how a person’s situation may change for the worse, , resulting in the perception of both positive and negative emotions. Interdependent self-construal can also lead them to perceive mixed-valence emotion, by causing East Asians to guess multiple external social factors at the same time to explain a facial expression.
 
